# tvm-ffi

./: .asf.yaml  CMakeLists.txt  README.md  debug.py  pyproject.toml
.github/workflows/: ci_test.yml  publish_wheel.yml
addons/torch_c_dlpack_ext/: README.md
cmake/Utils/: Library.cmake
examples/jax/: CMakeLists.txt  README.md  prompt.md  pyproject.toml  run_example.py  try_jax.py
examples/jax/python/jax_tvm_ffi/: __init__.py
examples/jax/src/: jax_tvm_ffi.cc
examples/jax/tests/: test_arg_spec.py  test_load_inline_kernel.py
examples/mlir/: README.md  main.py  pyproject.toml
examples/mlir/mlir_tvm_ffi/: __init__.py  _mlir.py  call_provider.py  mlir_builder.py  spec.py  tvm_ffi_builder.py  utils.py
examples/mlir/tests/: test_mlir_builder.py  test_param_decode.py  test_spec.py
include/tvm/ffi/: c_api.h  object.h  tvm_ffi.h
include/tvm/ffi/container/: dict.h  map.h  map_base.h
include/tvm/ffi/reflection/: registry.h
python/tvm_ffi/: __init__.py  _optional_torch_c_dlpack.py  container.py
python/tvm_ffi/cython/: base.pxi  core.pyx  function.pxi  tensor.pxi  tvm_ffi_python_helpers.h
python/tvm_ffi/testing/: _ffi_api.py
rust/: Cargo.toml  build.rs
rust/src/: c_api.rs  lib.rs  main.rs
rust/tvm-ffi-sys/src/: dlpack.rs
rust/tvm-ffi/src/collections/: tensor.rs
src/ffi/: backtrace.cc  backtrace_win.cc  container.cc  dtype.cc  object.cc
src/ffi/testing/: testing.cc
tests/cpp/: test_dict.cc  test_object.cc  test_reflection.cc
tests/cpp/extra/: test_c_env_api.cc  test_structural_equal_hash.cc
tests/python/: test_container.py  test_stl.py  test_tensor.py  test_type_converter.py
