[project]
name = "mlir-tvm-ffi"
version = "0.1.0"
description = "MLIR-based TVM-FFI function builder"
requires-python = ">=3.9"
dependencies = ["apache-tvm-ffi"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
  "UP",  # pyupgrade, https://docs.astral.sh/ruff/rules/#pyupgrade-up
  "PL",  # pylint, https://docs.astral.sh/ruff/rules/#pylint-pl
  "I",   # isort, https://docs.astral.sh/ruff/rules/#isort-i
  "RUF", # ruff, https://docs.astral.sh/ruff/rules/#ruff-specific-rules-ruf
  "NPY", # numpy, https://docs.astral.sh/ruff/rules/#numpy-specific-rules-npy
  "F",   # pyflakes, https://docs.astral.sh/ruff/rules/#pyflakes-f
  "ANN", # flake8-annotations, https://docs.astral.sh/ruff/rules/#flake8-annotations-ann
  "PTH", # flake8-use-pathlib, https://docs.astral.sh/ruff/rules/#flake8-use-pathlib-pth
  "D",   # pydocstyle, https://docs.astral.sh/ruff/rules/#pydocstyle-d
]
ignore = [
  "PLR2004", # pylint: magic-value-comparison
  "ANN401",  # flake8-annotations: any-type
  "D203",    # pydocstyle: incorrect-blank-line-before-class
  "D213",    # pydocstyle: multi-line-summary-second-line
]
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.pydocstyle]
convention = "numpy"


[tool.ruff.lint.pylint]
max-args = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"
